--- a/public/Assets/css/style.css
+++ b/public/Assets/css/style.css
@@ -960,7 +960,7 @@
      font-family: 'Poppins', sans-serif;
      padding: 4px;
 	 display: inline-block;
-	 background: #9e5ead4;
+	 background: #DDA0DD;
 	 color: #ffffff;
      font-weight: 600;
 }
@@ -979,7 +979,7 @@
 	 right: 0;
 }
  .mask-icon ul li{
-     background: #9e5ead4;
+     background: #DDA0DD;
 }
  .mask-icon ul li a{
      color: #ffffff;
@@ -987,7 +987,7 @@
      display: block;
 }
  .mask-icon a.cart{
-     background: #9e5ead4;
+     background: #DDA0DD;
      position: absolute;
      bottom: 0;
      left: 0px;
@@ -1141,28 +1141,28 @@
      line-height: 34px;
 }
  .option-blog li a:hover{
-     background: #9e5ead4;
+     background: #DDA0DD;
      color: #ffffff;
 }
  .tooltip-inner {
-     background-color: #9e5ead4;
+     background-color: #DDA0DD;
 }
  .tooltip.bs-tooltip-right .arrow:before {
-     border-right-color: #9e5ead4 !important;
+     border-right-color: #DDA0DD !important;
      padding-top: 0px !important;
      top: 0px !important;
 }
  .tooltip.bs-tooltip-left .arrow:before {
-     border-left-color: #9e5ead4 !important;
+     border-left-color: #DDA0DD !important;
 	 padding-top: 0px !important;
 	 padding-right: 5px !important;
      top: 0px !important;
 }
  .tooltip.bs-tooltip-bottom .arrow:before {
-     border-right-color: #9e5ead4 !important;
+     border-right-color: #DDA0DD !important;
 }
  .tooltip.bs-tooltip-top .arrow:before {
-     border-top-color: #9e5ead4 !important;
+     border-top-color: #DDA0DD !important;
 	 padding-top: 0px !important;
      top: 0px !important;
 }
@@ -1229,7 +1229,7 @@
      transition: all 0.3s ease;
 }
  .main-instagram.owl-carousel .owl-nav button.owl-next:hover, .main-instagram.owl-carousel .owl-nav button.owl-prev:hover{
-     background: #9e5ead4;
+     background: #DDA0DD;
 }
  .ins-inner-box{
      position: relative;
@@ -1284,7 +1284,7 @@
 	font-size: 20px;
 }
 .footer-top-box h3::before {
-    border-bottom: 2px solid #9e5ead4;
+    border-bottom: 2px solid #DDA0DD;
     content: "";
     height: 3px;
     width: 50%;
@@ -1350,8 +1350,8 @@
      line-height: 32px;
 }
  .footer-top-box ul li a:hover {
-     color: #9e5ead4;
-     border-color: #9e5ead4;
+     color: #DDA0DD;
+     border-color: #DDA0DD;
 }
 .footer-widget, .footer-link, .footer-link-contact{
 	margin-top: 15px;
@@ -1366,7 +1366,7 @@
      font-weight: 700;
 }
  .footer-widget h4::before {
-     border-bottom: 3px solid #9e5ead4;
+     border-bottom: 3px solid #DDA0DD;
      content: "";
      height: 3px;
      width: 100%;
@@ -1393,7 +1393,7 @@
      font-weight: 700;
 }
  .footer-link h4::before {
-     border-bottom: 3px solid #9e5ead4;
+     border-bottom: 3px solid #DDA0DD;
      content: "";
      height: 3px;
      width: 100%;
@@ -1434,8 +1434,8 @@
      left: 5px;
 }
  .footer-link ul li a:hover {
-     color: #9e5ead4;
-     border-color: #9e5ead4;
+     color: #DDA0DD;
+     border-color: #DDA0DD;
      padding-left: 20px;
 }
  .footer-link-contact h4{
@@ -1448,7 +1448,7 @@
      font-weight: 700;
 }
  .footer-link-contact h4::before {
-     border-bottom: 3px solid #9e5ead4;
+     border-bottom: 3px solid #DDA0DD;
      content: "";
      height: 3px;
      width: 100%;
@@ -1481,7 +1481,7 @@
      color: #000000;
 }
  .footer-link-contact ul li p a:hover{
-     color: #9e5ead4;
+     color: #DDA0DD;
 }
 /*------------------------------------------------------------------ Copyright -------------------------------------------------------------------*/
  .footer-copyright{
@@ -1498,7 +1498,7 @@
      color: #ffffff;
 }
  .footer-copyright p a:hover{
-     color: #9e5ead4;
+     color: #DDA0DD;
 }
 /*------------------------------------------------------------------ All Pages -------------------------------------------------------------------*/
  .all-title-box{
@@ -1602,7 +1602,7 @@
      width: 100%;
      height: 0;
      border-radius: 0px;
-     background: #9e5ead4;
+     background: #DDA0DD;
      position: absolute;
      top: 0;
      left: 0;
@@ -1705,14 +1705,14 @@
 }
  .our-team .social li a:hover{
      width: 35px;
-     background: #9e5ead4;
+     background: #DDA0DD;
      transition-delay: 0s;
 }
  .our-team .icon{
      width: 35px;
      height: 35px;
      line-height: 35px;
-     background: #9e5ead4;
+     background: #DDA0DD;
      text-align: center;
      color: #fff;
      position: absolute;
@@ -1747,7 +1747,7 @@
      opacity: 0.5;
 }
  .hover-team .team-content .title{
-     border-bottom: 2px solid #9e5ead4;
+     border-bottom: 2px solid #DDA0DD;
 }
  .shop-box-inner{
      padding: 70px 0px;
@@ -1790,7 +1790,7 @@
      height: 100%;
 }
  .search-product button:hover{
-     background: #9e5ead4;
+     background: #DDA0DD;
 }
  .filter-sidebar-left{
      margin-bottom: 20px;
@@ -1830,7 +1830,7 @@
      border-left: 1px solid #ced4da;
 }
  .list-group-tree .list-group-item.active {
-     color: #9e5ead4;
+     color: #DDA0DD;
      background-color: #fff;
      font-weight: 700;
 }
@@ -1844,7 +1844,7 @@
      background-color: #ced4da;
 }
  .list-group-tree .list-group-item:hover {
-     color: #9e5ead4;
+     color: #DDA0DD;
      background-color: #fff;
      outline: 0;
      font-weight: 700;
@@ -1853,7 +1853,7 @@
      margin-bottom: 20px;
 }
  #slider-range .ui-slider-handle {
-     background-color: #9e5ead4;
+     background-color: #DDA0DD;
      border: 2px solid #fff;
      border-radius: 50%;
      cursor: pointer;
@@ -1864,7 +1864,7 @@
      box-shadow: 0px 0px 6.65px 0.35px rgba(0,0,0,0.15);
 }
  #slider-range .ui-slider-range {
-     background-color: #9e5ead4;
+     background-color: #DDA0DD;
      border-radius: 0;
 }
  #slider-range {
@@ -1940,15 +1940,15 @@
      color: #ffffff;
 }
  .toolbar-sorter-right .btn-light:hover{
-     background: #9e5ead4;
+     background: #DDA0DD;
      border-radius: 0px;
      border: none;
 }
  .toolbar-sorter-right .show > .btn-light.dropdown-toggle{
-     background-color: #9e5ead4;
+     background-color: #DDA0DD;
 }
  .toolbar-sorter-right .bootstrap-select .dropdown-toggle:focus{
-     background: #9e5ead4;
+     background: #DDA0DD;
 }
  .toolbar-sorter-right .dropup .dropdown-toggle::after{
      position: absolute;
@@ -1976,7 +1976,7 @@
      padding: 4px 12px;
 }
  .product-item-filter li .nav-link.active {
-     background: #9e5ead4;
+     background: #DDA0DD;
      border: none;
      color: #ffffff;
 }
@@ -2038,7 +2038,7 @@
      padding: 70px 0px;
 }
  .table-main table thead{
-     background: #9e5ead4;
+     background: #DDA0DD;
      color: #ffffff;
 }
  .table-main .table thead th{
@@ -2057,7 +2057,7 @@
      text-align: center;
 }
  .quantity-box input:focus{
-     border-color: #9e5ead4;
+     border-color: #DDA0DD;
 }
  .name-pr a{
      font-weight: 700;
@@ -2086,7 +2086,7 @@
      padding: 0px 20px;
 }
  .coupon-box .input-group .input-group-append .btn-theme:hover {
-     background: #9e5ead4;
+     background: #DDA0DD;
 }
  .update-box input[type="submit"]{
      background: #000000;
@@ -2112,7 +2112,7 @@
      width: inherit;
 }
  .update-box input[type="submit"]:hover{
-     background: #9e5ead4;
+     background: #DDA0DD;
 }
  .order-box h3{
      font-size: 16px;
@@ -2129,7 +2129,7 @@
 }
  .gr-total h5 {
      font-weight: 700;
-     color: #9e5ead4;
+     color: #DDA0DD;
      font-size: 18px;
      margin: 0px;
      padding: 0px;
@@ -2170,7 +2170,7 @@
      font-size: 14px;
 }
  .needs-validation .form-control:focus {
-     border: 1px solid #9e5ead4 !important;
+     border: 1px solid #DDA0DD !important;
 }
  .review-form-box .form-control{
      min-height: 40px;
@@ -2180,20 +2180,20 @@
      font-size: 14px;
 }
  .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-     background-color: #9e5ead4;
+     background-color: #DDA0DD;
      box-shadow: none;
 }
  .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-     background-color: #9e5ead4;
+     background-color: #DDA0DD;
      box-shadow: none;
 }
  .new-account-login h5 {
      font-size: 18px;
-     color: #1111111;
+     color: #111111;
      font-weight: 600;
 }
  .new-account-login h5 a:hover{
-     color: #9e5ead4;
+     color: #DDA0DD;
 }
  .review-form-box button{
      padding: 10px 20px;
@@ -2239,7 +2239,7 @@
      color: #000000;
 }
  .my-account-page a:hover{
-     color: #9e5ead4;
+     color: #DDA0DD;
 }
  .service-icon i{
      font-size: 34px;
@@ -2315,10 +2315,10 @@
     }
      40% {
          opacity: 0.5;
-         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #9e5ead4, 0 0 0 10px rgba(0, 53, 68, 0.5);
+         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #DDA0DD, 0 0 0 10px rgba(0, 53, 68, 0.5);
     }
      100% {
-         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #9e5ead4, 0 0 0 10px rgba(0, 53, 68, 0.5);
+         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #DDA0DD, 0 0 0 10px rgba(0, 53, 68, 0.5);
          -webkit-transform: scale(1.5);
          opacity: 0;
     }
@@ -2329,10 +2329,10 @@
     }
      40% {
          opacity: 0.5;
-         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #9e5ead4, 0 0 0 10px rgba(0, 53, 68, 0.5);
+         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #DDA0DD, 0 0 0 10px rgba(0, 53, 68, 0.5);
     }
      100% {
-         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #9e5ead4, 0 0 0 10px rgba(0, 53, 68, 0.5);
+         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #DDA0DD, 0 0 0 10px rgba(0, 53, 68, 0.5);
          -moz-transform: scale(1.5);
          opacity: 0;
     }
@@ -2343,7 +2343,7 @@
     }
      40% {
          opacity: 0.5;
-         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #9e5ead4, 0 0 0 10px rgba(0, 53, 68, 0.5);
+         box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #DDA0DD, 0 0 0 10px rgba(0, 53, 68, 0.5);
     }
      100% {
          box-shadow: 0 0 0 2px rgba(0, 53, 68, 0.1), 0 0 10px 10px #3851bc, 0 0 0 10px rgba(0, 53, 68, 0.5);
@@ -2395,10 +2395,10 @@
      left: 0;
      top: 5px;
      padding-right: 6px;
-     color: #9e5ead4;
+     color: #DDA0DD;
 }
  .contact-info-left ul li p a:hover{
-     color: #9e5ead4;
+     color: #DDA0DD;
 }
  .contact-form-right{
      padding: 20px;
@@ -2422,7 +2422,7 @@
      position: relative;
 }
  .contact-form-right .form-group .form-control:focus{
-     border: 1px solid #9e5ead4;
+     border: 1px solid #DDA0DD;
      box-shadow: none;
 }
  .submit-button button{
@@ -2482,7 +2482,7 @@
      font-size: 24px;
 }
  .single-product-details h5 {
-     color: #9e5ead4;
+     color: #DDA0DD;
      font-weight: 700;
      font-size: 18px;
 }
@@ -2494,7 +2494,7 @@
      font-size: 15px;
 }
  .available-stock span a {
-     color: #9e5ead4;
+     color: #DDA0DD;
 }
  .single-product-details h4{
      font-size: 18px;
@@ -2549,7 +2549,7 @@
  .share-bar{
 }
  .share-bar a {
-     background: #9e5ead4;
+     background: #DDA0DD;
      color: #ffffff;
      padding: 5px 10px;
      display: inline-block;
@@ -2583,7 +2583,7 @@
      text-align: center;
 }
  .featured-products-box .owl-nav button.owl-prev:hover, .featured-products-box .owl-nav button.owl-next:hover{
-     background: #9e5ead4;
+     background: #DDA0DD;
 }
  .table-responsive .table td, .table-responsive .table th {
      vertical-align: middle;
@@ -2597,24 +2597,4 @@
 	padding: 12px 25px;
 	border: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
