--- a/public/Assets/css/style.css
+++ b/public/Assets/css/style.css
@@ -394,15 +394,9 @@
          color: #eee;
     }
 }
- @media (max-width: 992px) {
-    /* Navbar General ------*/
-     nav.navbar .navbar-brand{
-         margin-top: 0;
-         position: relative;
-         top: -2px;
-    }
+
      nav.navbar .navbar-brand img.logo{
-         width: 160px;
+         width: 200px;
     }
      .attr-nav > ul > li > a{
          padding: 16px 15px 15px;
@@ -1376,8 +1370,9 @@
 }
  .footer-widget p {
      color: #000000;
+     display: block;
      font-weight: 400;
-     font-size: 14px;
+     font-size: 17px;
      padding-bottom: 20px;
 }
 
@@ -1473,6 +1468,7 @@
  .footer-link-contact ul li p{
      font-size: 16px;
      color: #000000;
+     display: block;
      font-weight: 300;
      padding-right: 16px;
      line-height: 24px;
